# simp-social-demo

./: .gitignore  EXPLANATION.md  README.md  project.md
backend/: .example_env  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  prompt.py
backend/app/api/routes/: conversations.py  dashboard.py  dealerships.py  internal.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/schemas/: conversation.py  dashboard.py  dealership.py
backend/app/seed/: __init__.py  dealerships.py
backend/app/services/: contact_service.py  conversation_service.py  dashboard_service.py  dealership_service.py  extraction_service.py  llm_service.py  notification_service.py  prompt_service.py  scoring_service.py
backend/tests/: manual_extraction_db_check.py  test_conversation_service.py  test_extraction_service.py  test_llm_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/: DealershipSelector.tsx  LanguageSelector.tsx  LeadSummaryCard.tsx  MessageInput.tsx  MessageList.tsx  StatusBadge.tsx  VerticalTabs.tsx
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  DealershipDashboardPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
