[project]
name = "simpsocial-backend"
version = "0.1.0"
description = "SimpSocial multi-dealership MVP backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "sqlalchemy==2.0.40",
  "pydantic==2.11.3",
  "pydantic-settings==2.8.1",
  "httpx==0.28.1",
  "langchain==0.3.25",
  "langchain-groq==0.3.2",
]
